--- a/package.json
+++ b/package.json
@@ -1,19 +1,13 @@
 {
-  "name": "shopmarket",
+  "name": "Sa3ii",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^1.2.1",
-    "bootstrap": "^5.3.0-alpha1",
-    "date-fns": "^2.29.3",
-    "dateformat": "^5.0.3",
     "formik": "^2.2.9",
-    "i18next-browser-languagedetector": "^7.0.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.0",
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^12.1.1",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
