--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-emoji-rating": "^1.0.6",
+    "react-icons": "^4.12.0",
     "react-query": "^3.39.2",
     "react-rating-emoji": "^1.1.1",
     "react-router-dom": "^6.6.1",
